# nas-setup

./: .editorconfig  .gitignore  TODO  Taskfile.yml  todo  todo.md
ansible/: ansible.cfg  (+2 more)
autorip/: main.py  pyproject.toml
autorip/api/: app.py
autorip/api/database/: json_storage.py
autorip/assets/: h264_1080p_medium_22crf_opus_5.1_384kbps.json
autorip/autorip/: __init__.py
autorip/autorip-web/: pnpm-lock.yaml
autorip/autorip-web/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
autorip/autorip-web/frontend/src/: routes.ts
autorip/autorip/config/: config.py  config_types.py  schema.py
autorip/autorip/logger/: logger.py
autorip/autorip/process/: open_process_wrapper.py  process_manager.py
autorip/autorip/ripper/: __init__.py  blueray_ripper.py
autorip/autorip/utils/: __init__.py
autorip/config/: config.py
autorip/core/: config.py  logger.py
autorip/core/utils/: file_utils.py  string_utils.py
autorip/handbrake/: handbrake_wrapper.py
autorip/logger/: __init__.py  logger.py
autorip/makemkv/: make_mkv_wrapper.py
autorip/makemkv/constants/: makemkv_attributes.py
autorip/makemkv/models/: disc_properties.py
autorip/media_management/: radarr_wrapper.py  uploader.py
autorip/metadata/: metadata_wrapper.py
autorip/metadata/models/: metadata.py
autorip/misc/: __init__.py  logger.py  utils.py
autorip/process/: __init__.py  open_process_wrapper.py  process_manager.py  spawn_locked_exception.py
autorip/ripper/: __init__.py  blueray_ripper.py
autorip/ripper/models/: disc_properties.py  makemkv_attributes.py
autorip/ripper/wrapper/: makemkv.py  tmdb.py
autorip/utils/: __init__.py  config.py  logger.py  process.py  string.py  typing.py
autorip/web/: __init__.py
(+186 files in other folders)
