[tool.poetry]
name = "autorip"
version = "0.1.0"
description = "Automatic Ripping Machine"
authors = ["DevTobias <tobi.kaerst@gmx.de>"]

[tool.poetry.scripts]
ripper = "autorip:run"
web = "web:run"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
xmltodict = "^0.13.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
jsonschema = "^4.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
